--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "dev:frontend": "cd ./Frontend && npm run dev",
     "dev:backend": "nodemon index.js",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev": "npm run dev:backend",
     "postinstall": "cd ./Frontend && npm install && npm run build"
   },
   "author": "",
