--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev:frontend": "cd ./Frontend && npm run dev",
     "dev:backend": "nodemon index.js",
-    "dev": "npm run dev:backend",
-    "postinstall": "cd ./Frontend && npm install && npm run build"
+    "dev": "npm run dev:backend"
   },
   "author": "",
   "license": "ISC",
