--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=4000
-NODE_ENV=dev
+NODE_ENV=production
 JWT_SECRET="Jwt_Secret"
 MONGDB_URL= mongodb+srv://vicky:vicky@cluster0.lpnka.mongodb.net/
