--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "dev:frontend": "cd ./Frontend && npm run dev",
     "dev:backend": "nodemon index.js",
-    "dev": "npm run dev:backend"
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "postinstall": "cd ./Frontend && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
