--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev:frontend": "cd ./Frontend && npm run dev",
-    "dev:backend": "nodemon index.js",
-    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "postinstall": "cd ./Frontend && npm install && npm run build"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
